# segmentation

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.train  README.md  pyproject.toml  run_hpo.sh
.github/workflows/: lint.yaml  test.yaml
sign_language_segmentation/: args.py  bin.py  evaluate.py  hpo.py  metrics.py  model_card_template.md  notifier.py  optuna.yaml  server.py  slim_checkpoint.py  train.py
sign_language_segmentation/data/: README.md  create_dataset.py  dataset.py  splits.json  utils.py
sign_language_segmentation/datasets/: __init__.py  common.py
sign_language_segmentation/datasets/annotation_platform/: __init__.py  dataset.py  sync.py
sign_language_segmentation/datasets/dgs/: README.md  __init__.py  dataset.py  splits.json  utils.py
sign_language_segmentation/datasets/null/: __init__.py  dataset.py  sync.py
sign_language_segmentation/datasets/signtube/: __init__.py  captions.sql  dataset.py  sync.py
sign_language_segmentation/figures/bio_tagging/: num_segments.json
sign_language_segmentation/figures/optical_fow/: optical_flow.py
sign_language_segmentation/jobs/: job_batch.sh  job_batch_eval.sh
sign_language_segmentation/model/: model.py  pose_encoder.py
sign_language_segmentation/old/: bin.py
sign_language_segmentation/old/jobs/: job_batch_decoding_E1s.sh  job_batch_decoding_E4s.sh  job_batch_eval_external.sh
sign_language_segmentation/publish/: __init__.py  model_card_template.md  publish.py  utils.py
sign_language_segmentation/src/: args.py  data.py  evaluate_mediapi.py  model.py  plot_segment_distribution.py  pose_utils.py  pred.py  summary.py  summary_decoding.py  summary_eval_external.py  summary_mediapi.py  summary_pro.py  summary_pro_new.py  summary_to_latex.py  tfds_dataset.py  train.py
sign_language_segmentation/src/bobsl/: data.py  evaluate.py  evaluate_external.py
sign_language_segmentation/src/bslcp/: data.py  evaluate.py  find_negatives.csv  find_negatives.py  merge_elan.py  pose.sh  results.csv
sign_language_segmentation/src/utils/: find_optimal_cutoff.py  metrics.py
sign_language_segmentation/tests/: data_test.py  example.pose  model_overfit_test.py  model_test.py  test_annotation_platform.py  test_common.py  test_inference.py  test_notifier.py  test_null_dataset.py  test_publish_cli.py  test_publish_hf_ops.py  test_publish_utils.py  test_signtube.py  test_utils.py
sign_language_segmentation/utils/: __init__.py  bio.py  pose.py
