[project]
name = "sign-language-segmentation"
description = "Sign language pose segmentation model on both the sentence and sign level"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" },
    { name = "Zifan Jiang", email = "jiang@cl.uzh.ch" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pose-format>=0.8.1",
    "numpy<2",
    "pympi-ling",
    "torch",
    "sign_language_datasets",
    "tensorflow<2.19",
    "tensorflow-datasets==4.9.2",
    "lxml",
    "webvtt-py",
    "pose-anonymization",
    "scikit-learn",
    "pytorch-lightning",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "wandb",
]
server = [
    "Flask",
    "Werkzeug",
    "gunicorn",
    "Flask-Cors",
    "Flask-Compress",
    "Flask-Caching",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E501",  # line too long (handled by line-length)
    "F401",  # unused imports in __init__.py re-exports
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sign_language_segmentation*"]

[tool.setuptools.package-data]
sign_language_segmentation = ["**/*.json", "**/*.ckpt"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["sign_language_segmentation"]

[project.scripts]
pose_to_segments = "sign_language_segmentation.bin:main"
slim_checkpoint = "sign_language_segmentation.slim_checkpoint:main"
