[project]
name = "sign-language-segmentation"
description = "Sign language pose segmentation model on both the sentence and sign level"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" },
    { name = "Zifan Jiang", email = "jiang@cl.uzh.ch" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pose-format>=0.8.1",
    "numpy<2",
    "pympi-ling",
    "torch",
    "pose-anonymization",
    "scikit-learn",
    "pytorch-lightning",
]

[project.optional-dependencies]
dgs = [
    "sign_language_datasets",
    "tensorflow<2.19",
    "tensorflow-datasets==4.9.2",
    "pyarrow",  # transitive: tensorflow-datasets needs it at import time
    "lxml",
    "webvtt-py",  # transitive: sign_language_datasets eagerly imports mediapi_skel
]
platform = [
    "httpx",
    "python-dotenv",
]
train = [
    "sign-language-segmentation[dgs]",
    "sign-language-segmentation[platform]",
    "wandb",
    "optuna",
    "optuna-integration[pytorch_lightning]",
    "pyyaml",
]
dev = [
    "pytest",
    "ruff",
]
server = [
    "Flask",
    "Werkzeug",
    "gunicorn",
    "Flask-Cors",
    "Flask-Compress",
    "Flask-Caching",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E501",  # line too long (handled by line-length)
    "F401",  # unused imports in __init__.py re-exports
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sign_language_segmentation*"]

[tool.setuptools.package-data]
sign_language_segmentation = ["**/*.json", "**/*.ckpt", "**/*.yaml"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["sign_language_segmentation"]

[project.scripts]
pose_to_segments = "sign_language_segmentation.bin:main"
slim_checkpoint = "sign_language_segmentation.slim_checkpoint:main"
